--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,10 @@
 server.port=8090
+
+#Database
+spring.datasource.url=jdbc:postgresql//localhost:5432/platzi-market
+spring.datasource.username=postgres
+spring.datasource.password=maria123
+
+#Esto por que debe configurar el controlador de la base de datos y las propiedades de conexión de JDBC.
+spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
