--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,11 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	runtimeOnly 'org.postgresql:postgresql:42.2.27'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
