--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ dependencies {
 
 	runtimeOnly 'org.postgresql:postgresql:42.2.27'
 
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
