correcciones a imagen del curso

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,5 +6,5 @@ spring.datasource.username=postgres
 spring.datasource.password=maria123
 
 #Esto por que debe configurar el controlador de la base de datos y las propiedades de conexión de JDBC.
-spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#spring.autoconfigure.exclude = org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
